Fix pay button on Safari.

--- a/app/css/touch.styl
+++ b/app/css/touch.styl
@@ -165,6 +165,10 @@ $mobile-view() {
     bottom: 0;
     z-index: 10;
     transform: translateY(100%);
+
+    &.shift-ios {
+      bottom: 50px;
+    }
   }
 
   .one-method #modal {
